# parallel_profiler

./: .gitignore  README.md  push.sh  setup.py
src/c/openmp/: CMakeLists.txt  build.sh  debug.sh  main.c
src/cython/: main_cython.c  main_cython.pyx
src/fortran/: main_fortran.f90
src/python/paraprof/: sample.py
src/python/paraprof/scaling/: profiler.py  strong_scaling.py  weak_scaling.py
src/python/paraprof/scripts/: paraprof.py
tutorial/: 01-link.sh  02-openmp  03-openacc  05-mpi-fortran  06-cuda  07-mpi+cuda  build.sh  interactive_cpu.sh  interactive_gpu.sh  setup_env.sh  steps.md
tutorial/c/openmp/: array_pow10.c  array_pow10.h
tutorial/languages/c/profiling/cuda/: main  main.cu  plot-strong-scaling.sh
tutorial/languages/c/profiling/mpi+cuda/: build.sh  clean.sh  debug.sh  main  main.cu  run.out  rund.sh  strong-scaling.ini
tutorial/languages/c/profiling/mpi+openmp/: build.sh  gen-strong-scaling.sh  main  main.c  run.out  strong-scaling.ini  strong-scaling.sh  weak-scaling.ini  weak-scaling.sh
tutorial/languages/c/profiling/openacc/: build.sh  gen-weak-scaling.sh  main.c
tutorial/languages/c/profiling/openmp/: build.sh  debug.sh  gen-strong-scaling.sh  gen-weak-scaling.sh  main  main.c
tutorial/languages/fortran/code_samples/cuda/: build.sh  main.c  matmul_kernels.mod
tutorial/languages/fortran/profiling/openmp/: main  (+8 more)
tutorial/languages/python/profiling/: mpi+openmp
tutorial/python/mpi/: gen-strong-scaling.sh  run.sh  test.py
tutorial/python/mpi+cuda/: run.sh  tail.sh
tutorial/python/openmp/: gen-strong-scaling.sh  gen-weak-scaling.sh
(+51 files in other folders)
